feat: Allow forcing source type for stdin and files